# bgfx-basic-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bgfxCMakeLists.txt
extras/cmake/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
extras/cmakeTemplate/: appSignature.h.in
extras/tools/bin2c/: bin2c
src/: _missing_texture.h  _missing_texture.ktx  batchRenderer.cpp  batchRenderer.hpp  main.cpp  renderer.cpp  renderer.hpp  surfaceComponent.hpp
src/shader/: default.fs  default.fs.h  default.vs  default.vs.h
